[gd_scene load_steps=9 format=3 uid="uid://cs8e62lsifik5"]

[ext_resource type="Script" path="res://game/floor.gd" id="3"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(2, 2, 2)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7a0en"]
blend_mode = 2

[sub_resource type="CanvasItemMaterial" id="6"]
blend_mode = 1

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11
corner_detail = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2qncm"]
shading_mode = 0

[sub_resource type="PlaneMesh" id="2"]
size = Vector2(0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_boyhf"]
resource_local_to_scene = true
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 16.0
emission_operator = 1

[node name="StandingGround" type="StaticBody3D" groups=["floor"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
collision_layer = 8
collision_mask = 8
script = ExtResource("3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("1")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
own_world_3d = true
size_2d_override = Vector2i(128, 128)
render_target_clear_mode = 1
render_target_update_mode = 3

[node name="ColorRect" type="ColorRect" parent="SubViewport"]
material = SubResource("CanvasItemMaterial_7a0en")
offset_right = 512.0
offset_bottom = 512.0
color = Color(1, 1, 1, 0.00392157)

[node name="burn_l" type="Node2D" parent="SubViewport/ColorRect"]
position = Vector2(-64, -64)

[node name="sprite" type="Panel" parent="SubViewport/ColorRect/burn_l"]
material = SubResource("6")
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
theme_override_styles/panel = SubResource("5")

[node name="burn_r" type="Node2D" parent="SubViewport/ColorRect"]
position = Vector2(-64, -64)

[node name="sprite" type="Panel" parent="SubViewport/ColorRect/burn_r"]
material = SubResource("6")
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
theme_override_styles/panel = SubResource("5")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0)

[node name="Node3D" type="Node3D" parent="Node3D"]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Node3D/Node3D"]
transform = Transform3D(0.02, 0, 0, 0, 1, 0, 0, 0, 1, -0.245, 0, 0)
layers = 3
material_override = SubResource("StandardMaterial3D_2qncm")
mesh = SubResource("2")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Node3D/Node3D"]
transform = Transform3D(0.02, 0, 0, 0, 1, 0, 0, 0, 1, 0.245, 0, 0)
layers = 3
material_override = SubResource("StandardMaterial3D_2qncm")
mesh = SubResource("2")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Node3D/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.02, 0, 0, 0.245)
layers = 3
material_override = SubResource("StandardMaterial3D_2qncm")
mesh = SubResource("2")
skeleton = NodePath("../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Node3D/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.02, 0, 0, -0.245)
layers = 3
material_override = SubResource("StandardMaterial3D_2qncm")
mesh = SubResource("2")
skeleton = NodePath("../..")

[node name="cutFloor" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.001, 0)
layers = 3
material_override = SubResource("StandardMaterial3D_boyhf")
mesh = SubResource("2")

[node name="MeshInstance2" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.001, 0)
visible = false
layers = 3
mesh = SubResource("2")

[node name="TimerClear" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
autostart = true

[connection signal="timeout" from="TimerClear" to="." method="_on_timer_clear_timeout"]
